tests/test_exception/good/exceptions_squared.catala_en
## Test

```catala
declaration scope A:
  context output x content integer

scope A:
  label base_x
  definition x equals 0

  label exception_x
  exception base_x
  definition x equals 1

  exception exception_x
  definition x equals 2
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
