tests/test_exception/bad/two_exceptions.catala_en
## Test

```catala
declaration scope A:
  context x content integer

scope A:
  label base_x
  definition x equals 0

  exception base_x
  definition x equals 1

  exception base_x
  definition x equals 2
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
